add short answer to Q1, tuning to Q2

--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8cd89de4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/devel/HW2_S23/Project.toml`\n"
+     ]
+    }
+   ],
    "source": [
     "import Pkg\n",
     "Pkg.activate(@__DIR__)\n",
@@ -48,7 +56,7 @@
    "id": "4ce77d26",
    "metadata": {},
    "source": [
-    "# Q1: Finite-Horizon LQR (50 pts)\n",
+    "# Q1: Finite-Horizon LQR (55 pts)\n",
     "For this problem we are going to consider a \"double integrator\" for our dynamics model. This system has a state $x \\in \\mathbb{R}^4$, and control $u \\in \\mathbb{R}^2$, where the state describes the 2D position $p$ and velocity $v$ of an object, and the control is the acceleration $a$ of this object.  The state and control are the following:\n",
     "$$\\begin{align} x &= [p_1, p_2, v_1, v_2] \\\\ u &= [a_1, a_2] \\end{align}$$\n",
     "And the continuous time dynamics for this system are the following:\n",
@@ -62,7 +70,7 @@
    "source": [
     "## Part A: Discretize the model (5 pts)\n",
     "\n",
-    "Use the matrix exponential (`exp` in Julia) to discretize the continuous time model. See the [first recitation](https://youtu.be/EjAiRam95U4) if you're unsure of what to do. "
+    "Use the matrix exponential (`exp` in Julia) to discretize the continuous time model assuming we have a zero-order hold on the control. See [this part of the first recitation](https://youtu.be/97JZi5ztc3c?si=Sxqg_uHnRXoozafM&t=2686) if you're unsure of what to do. "
    ]
   },
   {
@@ -631,6 +639,11 @@
     "        Xsim_lqr[i+1] = A*Xsim_lqr[i] + B*u_lqr + noise\n",
     "    end\n",
     "    \n",
+    "    # make sure our LQR achieved the goal \n",
+    "    @test norm(Xsim_cvx[end]) > norm(Xsim_lqr[end])\n",
+    "    @test norm(Xsim_lqr[end]) < .7\n",
+    "    @test norm(Xsim_cvx[end]) > 2.0\n",
+    "    \n",
     "    \n",
     "    # ------------------------plotting--------------------------\n",
     "    X1m = mat_from_vec(Xsim_cvx)\n",
@@ -823,6 +836,26 @@
     "    @test 1e-13 < norm(Q + K'*R*K + (A - B*K)'P*(A - B*K) - P) < 1e-3\n",
     "    \n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f961b004",
+   "metadata": {},
+   "source": [
+    "## Part F (5 pts): One sentence short answer\n",
+    "\n",
+    "1. What is the difference between stage cost and terminal cost?\n",
+    "\n",
+    "**put one sentence answer here**\n",
+    "\n",
+    "2. In order to build our LQR controller for a linear system, do we need to know the initial state $x_0$?\n",
+    "\n",
+    "**put one sentence answer here**\n",
+    "\n",
+    "3. If the linear system is not controllable, will either LQR or convex optimization work?\n",
+    "\n",
+    "**put one sentence answer here**\n"
    ]
   }
  ],
