--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -182,7 +182,6 @@
     "    \n",
     "    # cost terms \n",
     "    Q = diagm([1,1,.05,.1])\n",
-    "    Qf = 1*Q\n",
     "    R = 0.1*diagm(ones(nu))\n",
     "    \n",
     "    Kinf = zeros(1,4) \n",
@@ -203,6 +202,93 @@
     "    # animation stuff\n",
     "    display(animate_cartpole(X, dt))\n",
     "    # ---------------tests and plots/animations---------------\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deb14f49",
+   "metadata": {},
+   "source": [
+    "## Part B: Infinite horizon sLQR cost tuning (5 pts)\n",
+    "\n",
+    "We are now going to tune the LQR cost to satsify our following performance requirement:\n",
+    "\n",
+    "$\\|x(5.0) - x_{\\text{goal}}\\|=$`norm(X[N] - xgoal) < 0.1` \n",
+    "\n",
+    "which says that the norm of the state at 5 seconds (last timestep in our simulation) should be less than 0.1. We are also going to have to deal with the following actuator limits: $-3 \\leq u \\leq 3$. You won't be able to directly reason about this actuator limit in our LQR controller, but we can tune our cost function to avoid saturating the actuators (reaching the actuator limits) for too long. Here are our suggestions for tuning successfuly:\n",
+    "\n",
+    "1. First, adjust the values in Q and R to find a controller that stabilizes the cartpole. The key here is tuning our cost to keep the control away from the actuator limits for too long. \n",
+    "2. Now that you can stabilize the system, the next step is to tune the values in Q and R accomplish our performance goal of `norm(X[N] - xgoal) < 0.1`. Think about the individual values in Q, and which states we really want to penalize. The positions $(p,\\, \\theta)$ should be penalized differently than the velocities $(\\dot{p}, \\,\\dot{\\theta})$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff25f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@testset \"LQR about eq\" begin\n",
+    "    \n",
+    "    # states and control sizes \n",
+    "    nx = 4 \n",
+    "    nu = 1 \n",
+    "    \n",
+    "    # desired x and g (linearize about these)\n",
+    "    xgoal = [0, pi, 0, 0]\n",
+    "    ugoal = [0]\n",
+    "    \n",
+    "    # initial condition (slightly off of our linearization point)\n",
+    "    x0 = [0, pi, 0, 0] + [0.5, deg2rad(-10), .3, 0]\n",
+    "    \n",
+    "    # simulation size \n",
+    "    dt = 0.1 \n",
+    "    tf = 5.0 \n",
+    "    t_vec = 0:dt:tf\n",
+    "    N = length(t_vec)\n",
+    "    X = [zeros(nx) for i = 1:N]\n",
+    "    X[1] = x0 \n",
+    "    \n",
+    "    # estimated parameters (design our controller with these)\n",
+    "    params_est = (mc = 1.0, mp = 0.2, l = 0.5)\n",
+    "    \n",
+    "    # real paremeters (simulate our system with these)\n",
+    "    params_real = (mc = 1.2, mp = 0.16, l = 0.55)\n",
+    "    \n",
+    "    # TODO: solve for the infinite horizon LQR gain Kinf\n",
+    "    \n",
+    "    # cost terms \n",
+    "    Q = diagm([1,1,.05,.1])\n",
+    "    R = 0.1*diagm(ones(nu))\n",
+    "    \n",
+    "    Kinf = zeros(1,4) \n",
+    "    \n",
+    "    # vector of length 1 vectors for our control \n",
+    "    U = [zeros(1) for i = 1:N-1]\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # TODO: simulate this controlled system with rk4(params_real, ...)\n",
+    "    # TODO: make sure you clamp the control input with clamp.(U[i], -3.0, 3.0)\n",
+    "    \n",
+    "    \n",
+    "    # ---------------tests and plots/animations---------------\n",
+    "    @test X[1] == x0  # initial condition is used\n",
+    "    @test norm(X[end])>0 # end is nonzero\n",
+    "    @test norm(X[end] - xgoal) < 0.1 # within 0.1 of the goal \n",
+    "    @test norm(vcat(U...), Inf) <= 3.0 # actuator limits are respected\n",
+    "    \n",
+    "    Xm = hcat(X...)\n",
+    "    display(plot(t_vec,Xm',title = \"cartpole\",\n",
+    "                 xlabel = \"time(s)\", ylabel = \"x\",\n",
+    "                 label = [\"p\" \"θ\" \"ṗ\" \"θ̇\"]))\n",
+    "    \n",
+    "    # animation stuff\n",
+    "    display(animate_cartpole(X, dt))\n",
+    "    # ---------------tests and plots/animations---------------\n",
+    "    \n",
+    "    \n",
     "end"
    ]
   },
