short answer for Q2

--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -24,7 +24,7 @@
    "id": "a38c9cfe",
    "metadata": {},
    "source": [
-    "# Q2: LQR for nonlinear systems (25 pts)"
+    "# Q2: LQR for nonlinear systems (30 pts)"
    ]
   },
   {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb14f49",
+   "id": "1f99e365",
    "metadata": {},
    "source": [
     "## Part B: Infinite horizon sLQR cost tuning (5 pts)\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff25f8b",
+   "id": "286b678b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
    "id": "53c9c832",
    "metadata": {},
    "source": [
-    "## Part B: TVLQR for trajectory tracking (15 pts)\n",
+    "## Part C: TVLQR for trajectory tracking (15 pts)\n",
     "\n",
     "Here we are given a swingup trajectory that works for `params_est`, but will fail to work with `params_real`. To account for this sim to real gap, we are going to track this trajectory with a TVLQR controller. "
    ]
@@ -373,6 +373,26 @@
     "\n",
     "    \n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "540ce7c4",
+   "metadata": {},
+   "source": [
+    "## Part D (5 pts): One sentence short answer\n",
+    "\n",
+    "1. Will the LQR controller from part A be stable no matter where the cartpole starts?\n",
+    "\n",
+    "**put one sentence answer here**\n",
+    "\n",
+    "2. In order to build an infinite-horizon LQR controller for a nonlinear system, do we always need a state to linearize about?\n",
+    "\n",
+    "**put one sentence answer here**\n",
+    "\n",
+    "3. If we are worried about our LQR controller saturating our actuator limits, how should we change the cost?\n",
+    "\n",
+    "**put one sentence answer here**"
    ]
   }
  ],
