add short answer to Q3

--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -76,7 +76,7 @@
    "id": "57a19484",
    "metadata": {},
    "source": [
-    "# Q3: Optimal Rendezvous and Docking (50 pts)\n",
+    "# Q3: Optimal Rendezvous and Docking (55 pts)\n",
     "\n",
     "In this example, we are going to use convex optimization to control the SpaceX Dragon 1 spacecraft as it docks with the International Space Station (ISS). The dynamics of the Dragon vehicle can be modeled with [Clohessy-Wiltshire equations](https://en.wikipedia.org/wiki/Clohessy%E2%80%93Wiltshire_equations), which is a linear dynamics model in continuous time. The state and control of this system are the following:\n",
     "\n",
@@ -413,17 +413,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e963bd9",
+   "metadata": {},
+   "source": [
+    "## Part D (5 pts): Short answer\n",
+    "\n",
+    "1. List four reasons why an open loop policy wouldn't work well on a real system:\n",
+    "- **put answer here**\n",
+    "- **put answer here**\n",
+    "- **put answer here**\n",
+    "- **put answer here**\n",
+    "\n",
+    "\n",
+    "2. Give one pro and one con to a shorter planning horizon:\n",
+    "- **pro:**\n",
+    "- **con:**\n",
+    "\n",
+    "\n",
+    "3. For convex trajectory optimization, give three examples of convex cost functions we can use:\n",
+    "- **put answer here**\n",
+    "- **put answer here**\n",
+    "- **put answer here**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2389dbb1",
    "metadata": {},
    "source": [
-    "## Part D: Convex MPC (20 pts)\n",
+    "## Part E: Convex MPC (20 pts)\n",
     "\n",
-    "In part C, we solved for the optimal rendezvous trajectory using convex optimization, and verified it by simulating it in an open loop fashion (no feedback). This was made possible because we assumed that our linear dynamics were exact, and that we had a perfect estimate of our state. In reality, there are many issues that would prevent this open loop policy from being successful, here are a few:\n",
-    "\n",
-    "- imperfect state estimation \n",
-    "- unmodeled dynamics \n",
-    "- misalignments \n",
-    "- actuator uncertainties \n",
+    "In part C, we solved for the optimal rendezvous trajectory using convex optimization, and verified it by simulating it in an open loop fashion (no feedback). This was made possible because we assumed that our linear dynamics were exact, and that we had a perfect estimate of our state. In reality, there are many issues that would prevent this open loop policy from being successful.\n",
     "\n",
     "Together, these factors result in a \"sim to real\" gap between our simulated model, and the real model. Because there will always be a sim to real gap, we can't just execute open loop policies and expect them to be successful. What we can do, however, is use Model Predictive Control (MPC) that combines some of the ideas of feedback control with convex trajectory optimization. \n",
     "\n",
