--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e963bd9",
+   "id": "617e2259",
    "metadata": {},
    "source": [
     "## Part D (5 pts): Short answer\n",
@@ -425,15 +425,16 @@
     "- **put answer here**\n",
     "\n",
     "\n",
-    "2. Give one pro and one con to a shorter planning horizon:\n",
-    "- **pro:**\n",
-    "- **con:**\n",
-    "\n",
-    "\n",
-    "3. For convex trajectory optimization, give three examples of convex cost functions we can use:\n",
+    "2. For convex trajectory optimization, give three examples of convex cost functions we can use:\n",
     "- **put answer here**\n",
     "- **put answer here**\n",
-    "- **put answer here**\n"
+    "- **put answer here**\n",
+    "\n",
+    "\n",
+    "3. List three things that convex trajectory optimization can do that LQR cannot:\n",
+    "- **put answer here**\n",
+    "- **put answer here**\n",
+    "- **put answer here**"
    ]
   },
   {
