fixed typos in Q2, added ihlqr vs cvx trajopt to Q3

--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "617e2259",
+   "id": "ead98576",
    "metadata": {},
    "source": [
     "## Part D (5 pts): Short answer\n",
@@ -434,7 +434,18 @@
     "3. List three things that convex trajectory optimization can do that LQR cannot:\n",
     "- **put answer here**\n",
     "- **put answer here**\n",
-    "- **put answer here**"
+    "- **put answer here**\n",
+    "\n",
+    "4. Say we have the following convex trajectory optimization problem:\n",
+    "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} (x_i - x_{ref, i})^TQ(x_i - x_{ref, i}) + \\frac{1}{2} u_i^TRu_i \\bigg] + \\frac{1}{2}(x_N- x_{ref, N})^TQ_f\n",
+    "(x_N- x_{ref, N})\\\\ \n",
+    " \\text{st} \\quad & x_1 = x_{\\text{IC}} \\\\ \n",
+    " & x_{i+1} = A x_i + Bu_i \\quad \\text{for } i = 1,2,\\ldots,N-1 \\\\ \n",
+    " & x_{min} \\leq x_i \\leq x_{max} \\quad \\text{for } i = 1,2,\\ldots,N\\\\ \n",
+    " & u_{min} \\leq u_i \\leq u_{max} \\quad \\text{for } i = 1,2,\\ldots,N-1\n",
+    " \\end{align}\n",
+    " $$\n",
+    " If the optimal solution to this problem does not violate any either the state or control bounds (the $x_{min} \\leq x_i \\leq x_{max}$ and $u_{min} \\leq u_i \\leq u_{max}$ constraints), how will it differ from the finite-horizon LQR solution?"
    ]
   },
   {
