--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -207,16 +207,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a3a647",
+   "id": "2ba5bdb5",
    "metadata": {},
    "source": [
     "## Part B: Infinite horizon LQR cost tuning (5 pts)\n",
     "\n",
     "We are now going to tune the LQR cost to satisfy our following performance requirement:\n",
     "\n",
-    "$||x(5.0) - x_{\\text{goal}}\\|=$`norm(X[N] - xgoal) < 0.1` \n",
+    "$\\|x(5.0) - x_{\\text{goal}}\\|_2=$`norm(X[N] - xgoal) < 0.1` \n",
     "\n",
-    "which says that the norm of the state at 5 seconds (last timestep in our simulation) should be less than 0.1. We are also going to have to deal with the following actuator limits: $-3 \\leq u \\leq 3$. You won't be able to directly reason about this actuator limit in our LQR controller, but we can tune our cost function to avoid saturating the actuators (reaching the actuator limits) for too long. Here are our suggestions for tuning successfully:\n",
+    "which says that the L2 norm of the state at 5 seconds (last timestep in our simulation) should be less than 0.1. We are also going to have to deal with the following actuator limits: $-3 \\leq u \\leq 3$. You won't be able to directly reason about this actuator limit in our LQR controller, but we can tune our cost function to avoid saturating the actuators (reaching the actuator limits) for too long. Here are our suggestions for tuning successfully:\n",
     "\n",
     "1. First, adjust the values in Q and R to find a controller that stabilizes the cartpole. The key here is tuning our cost to keep the control away from the actuator limits for too long. \n",
     "2. Now that you can stabilize the system, the next step is to tune the values in Q and R accomplish our performance goal of `norm(X[N] - xgoal) < 0.1`. Think about the individual values in Q, and which states we really want to penalize. The positions $(p,\\, \\theta)$ should be penalized differently than the velocities $(\\dot{p}, \\,\\dot{\\theta})$. "
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c098577",
+   "id": "4417cd76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c42ebd",
+   "id": "2dbb241c",
    "metadata": {},
    "source": [
     "## Part D (5 pts): One sentence short answer\n",
