add basin of attraction question to Q2

--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -16,7 +16,8 @@
     "using JLD2\n",
     "using Test\n",
     "using Random\n",
-    "include(joinpath(@__DIR__,\"utils/cartpole_animation.jl\"))"
+    "include(joinpath(@__DIR__,\"utils/cartpole_animation.jl\"))\n",
+    "include(joinpath(@__DIR__,\"utils/basin_of_attraction.jl\"))"
    ]
   },
   {
@@ -24,7 +25,7 @@
    "id": "a38c9cfe",
    "metadata": {},
    "source": [
-    "# Q2: LQR for nonlinear systems (30 pts)"
+    "# Q2: LQR for nonlinear systems (35 pts)"
    ]
   },
   {
@@ -207,10 +208,129 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ba5bdb5",
+   "id": "e7ca7e01",
    "metadata": {},
    "source": [
-    "## Part B: Infinite horizon LQR cost tuning (5 pts)\n",
+    "## Part B: Infinite horizon LQR basin of attraction (5 pts)\n",
+    "\n",
+    "In part A we built a controller for the cartpole that was based on a linearized version of the system dynamics. This linearization took place at the `(xgoal, ugoal)`, so we should only really expect this model to be accurate if we are close to this linearization point (think small angle approximation). As we get further from the goal state, our linearized model is less and less accurate, making the performance of our controller suffer. At a certain point, the controller is unable to stabilize the cartpole due to this model mismatch. \n",
+    "\n",
+    "To demonstrate this, you are now being asked to take the same controller you used above, and try it for a range of initial conditions. For each of these simulations, you will determine if the controller was able to stabilize the cartpole. From here, you will plot the successes and failures on a plot and visualize a \"basin of attraction\", that is, a region of the state space where we expect our controller to stabilize the system. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37bfabfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function create_initial_conditions()\n",
+    "    # create a span of initial configurations \n",
+    "    M=20\n",
+    "    ps = LinRange(-7, 7, M)\n",
+    "    thetas = LinRange(deg2rad(180-60), deg2rad(180+60), M)\n",
+    "    \n",
+    "    initial_conditions = []\n",
+    "    \n",
+    "    for p in ps \n",
+    "        for theta in thetas \n",
+    "            push!(initial_conditions, [p, theta, 0, 0.0])\n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "    return initial_conditions\n",
+    "end\n",
+    "\n",
+    "function check_simulation_convergence(params_real, initial_condition, Kinf, xgoal, N, dt)\n",
+    "    \"\"\"\n",
+    "    args\n",
+    "        params_real: named tuple with model dynamics parametesr \n",
+    "        initial_condition: X0, length 4 vector \n",
+    "        Kinf: IHLQR feedback gain \n",
+    "        xgoal: desired state, length 4 vector \n",
+    "        N: number of simulation steps\n",
+    "        dt: time between steps \n",
+    "    \n",
+    "    return\n",
+    "        is_controlled: bool \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    x0 = 1 * initial_condition\n",
+    "    \n",
+    "    is_controlled = false \n",
+    "    \n",
+    "    # TODO: simulate the closed-loop (controlled) cartpole starting at the initial condition \n",
+    "    \n",
+    "    # for some of the unstable initial conditions, the integrator will \"blow up\", in order to \n",
+    "    # catch these errors, you can stop the sim and return is_controlled = false if norm(x) > 100 \n",
+    "    \n",
+    "    # you should consider the simulation to have been successfuly controlled if the \n",
+    "    # L2 norm of |xfinal - xgoal| < 0.1. (norm(xfinal-xgoal) < 0.1 in Julia)\n",
+    "    \n",
+    "\n",
+    "    return is_controlled\n",
+    "end\n",
+    "\n",
+    "let \n",
+    "    \n",
+    "    nx = 4 \n",
+    "    nu = 1 \n",
+    "    xgoal = [0, pi, 0, 0]\n",
+    "    ugoal = [0]\n",
+    "    dt = 0.1 \n",
+    "    tf = 5.0 \n",
+    "    t_vec = 0:dt:tf\n",
+    "    N = length(t_vec)\n",
+    "    \n",
+    "    \n",
+    "    # estimated parameters (design our controller with these)\n",
+    "    params_est = (mc = 1.0, mp = 0.2, l = 0.5)\n",
+    "    \n",
+    "    # real paremeters (simulate our system with these)\n",
+    "    params_real = (mc = 1.2, mp = 0.16, l = 0.55)\n",
+    "    \n",
+    "    # TODO: solve for the infinite horizon LQR gain Kinf\n",
+    "    # this is the same controller as part B\n",
+    "    \n",
+    "    # cost terms \n",
+    "    Q = diagm([1,1,.05,.1])\n",
+    "    R = 0.1*diagm(ones(nu))\n",
+    "    \n",
+    "    Kinf = zeros(1,4) \n",
+    "    \n",
+    "    # create the set of initial conditions we want to test for convergence\n",
+    "    initial_conditions = create_initial_conditions()\n",
+    "    \n",
+    "    convergence_list = [] \n",
+    "    \n",
+    "    for initial_condition in initial_conditions\n",
+    "\n",
+    "        convergence = check_simulation_convergence(params_real,\n",
+    "                                                   initial_condition,\n",
+    "                                                   Kinf, xgoal, N, dt)\n",
+    "        \n",
+    "        push!(convergence_list, convergence)\n",
+    "    end\n",
+    "    \n",
+    "    plot_basin_of_attraction(initial_conditions, convergence_list, ps, thetas)\n",
+    "    \n",
+    "\n",
+    "    # -------------tests------------------\n",
+    "    @test sum(convergence_list) < 190 \n",
+    "    @test sum(convergence_list) > 180 \n",
+    "    @test length(convergence_list) == 400 \n",
+    "    @test length(initial_conditions) == 400\n",
+    "        \n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d7cb8f5",
+   "metadata": {},
+   "source": [
+    "## Part C: Infinite horizon LQR cost tuning (5 pts)\n",
     "\n",
     "We are now going to tune the LQR cost to satisfy our following performance requirement:\n",
     "\n",
@@ -225,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4417cd76",
+   "id": "75c851e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +417,7 @@
    "id": "53c9c832",
    "metadata": {},
    "source": [
-    "## Part C: TVLQR for trajectory tracking (15 pts)\n",
+    "## Part D: TVLQR for trajectory tracking (15 pts)\n",
     "\n",
     "Here we are given a swingup trajectory that works for `params_est`, but will fail to work with `params_real`. To account for this sim to real gap, we are going to track this trajectory with a TVLQR controller. "
    ]
@@ -377,10 +497,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dbb241c",
+   "id": "9a7352c8",
    "metadata": {},
    "source": [
-    "## Part D (5 pts): One sentence short answer\n",
+    "## Part E (5 pts): One sentence short answer\n",
     "\n",
     "1. Will the LQR controller from part A be stable no matter where the cartpole starts?\n",
     "\n",
