converted plot to degrees

--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ca7e01",
+   "id": "1b91379b",
    "metadata": {},
    "source": [
     "## Part B: Infinite horizon LQR basin of attraction (5 pts)\n",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37bfabfc",
+   "id": "cd67eab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
     "        push!(convergence_list, convergence)\n",
     "    end\n",
     "    \n",
-    "    plot_basin_of_attraction(initial_conditions, convergence_list, ps, thetas)\n",
+    "    plot_basin_of_attraction(initial_conditions, convergence_list, ps, rad2deg.(thetas))\n",
     "    \n",
     "\n",
     "    # -------------tests------------------\n",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d7cb8f5",
+   "id": "1da85900",
    "metadata": {},
    "source": [
     "## Part C: Infinite horizon LQR cost tuning (5 pts)\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c851e5",
+   "id": "74b8ecca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a7352c8",
+   "id": "234b50d2",
    "metadata": {},
    "source": [
     "## Part E (5 pts): One sentence short answer\n",
