--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -275,7 +275,7 @@
     "\n",
     "Now we are going to assume that we have a perfect model (assume there is no sim to real gap), and that we have a perfect state estimate. With this, we are going to solve our control problem as a convex trajectory optimization problem. \n",
     "\n",
-    "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} (x_i - x_{ref, i})^TQ(x_i - x_{ref, i}) + \\frac{1}{2} u_i^TRu_i \\bigg] + \\frac{1}{2}(x_N- x_{ref, N})^TQ_f\n",
+    "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} (x_i - x_{ref, i})^TQ(x_i - x_{ref, i}) + \\frac{1}{2} u_i^TRu_i \\bigg] \n",
     "(x_N- x_{ref, N})\\\\ \n",
     " \\text{st} \\quad & x_1 = x_{\\text{IC}} \\\\ \n",
     " & x_{i+1} = A x_i + Bu_i \\quad \\text{for } i = 1,2,\\ldots,N-1  \\\\ \n",
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ead98576",
+   "id": "e742de33",
    "metadata": {},
    "source": [
     "## Part D (5 pts): Short answer\n",
