--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e742de33",
+   "id": "9cdaf23c",
    "metadata": {},
    "source": [
     "## Part D (5 pts): Short answer\n",
@@ -463,7 +463,7 @@
     "\n",
     "\n",
     "\n",
-    "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} (x_i - \\tilde{x}_{ref, i})^TQ({x}_i - \\tilde{x}_{ref, i}) + \\frac{1}{2} u_i^TRu_i \\bigg] + \\frac{1}{2}(x_N- \\tilde{x}_{ref, N})^TQ_f\n",
+    "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} (x_i - \\tilde{x}_{ref, i})^TQ({x}_i - \\tilde{x}_{ref, i}) + \\frac{1}{2} u_i^TRu_i \\bigg] + \\frac{1}{2}(x_N- \\tilde{x}_{ref, N})^TQ\n",
     "({x}_N- \\tilde{x}_{ref, N})\\\\ \n",
     " \\text{st} \\quad & x_1 = x_{\\text{IC}} \\\\ \n",
     " & x_{i+1} = A x_i + Bu_i \\quad \\text{for } i = 1,2,\\ldots,N-1  \\\\ \n",
