cleaned up short answer

--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bcb80e",
+   "id": "d43bee19",
    "metadata": {},
    "source": [
     "## Part F (5 pts): One sentence short answer\n",
@@ -849,13 +849,17 @@
     "\n",
     "**put one sentence answer here**\n",
     "\n",
-    "2. In order to build our LQR controller for a linear system, do we need to know the initial state $x_0$?\n",
+    "2. What is a terminal cost trying to capture? (think about dynamic programming)\n",
     "\n",
     "**put one sentence answer here**\n",
     "\n",
-    "3. If the linear system is not controllable, will either LQR or convex optimization work?\n",
+    "3. In order to build an LQR controller for a linear system, do we need to know the initial state $x_0$?\n",
     "\n",
-    "**put one sentence answer here**\n"
+    "**put one sentence answer here**\n",
+    "\n",
+    "4. If a linear system is uncontrollable, will the finite-horizon LQR convex optimization problem have a solution?\n",
+    "\n",
+    "**put one sentence answer here**"
    ]
   }
  ],
