--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -413,13 +413,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cdaf23c",
+   "id": "7337ac55",
    "metadata": {},
    "source": [
     "## Part D (5 pts): Short answer\n",
     "\n",
-    "1. List four reasons why an open loop policy wouldn't work well on a real system:\n",
-    "- **put answer here**\n",
+    "1. List three reasons why an open loop policy wouldn't work well on a real system:\n",
     "- **put answer here**\n",
     "- **put answer here**\n",
     "- **put answer here**\n",
