--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -28,6 +28,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12d968e4",
+   "metadata": {},
+   "source": [
+    "## Note: \n",
+    "\n",
+    "Some of the cells below will have multiple outputs (plots and animations), it can be easier to see everything if you do `Cell -> All Output -> Toggle Scrolling`, so that it simply expands the output area to match the size of the outputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "32f03c35",
    "metadata": {},
    "source": [
