--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -22,10 +22,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bdff41f3",
+   "metadata": {},
+   "source": [
+    "## Note: \n",
+    "\n",
+    "Some of the cells below will have multiple outputs (plots and animations), it can be easier to see everything if you do `Cell -> All Output -> Toggle Scrolling`, so that it simply expands the output area to match the size of the outputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a38c9cfe",
    "metadata": {},
    "source": [
-    "# Q2: LQR for nonlinear systems (35 pts)"
+    "# Q2: LQR for nonlinear systems (40 pts)"
    ]
   },
   {
