updated basin of attraction `create_initial_conditions`

--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -249,7 +249,7 @@
     "        end\n",
     "    end\n",
     "    \n",
-    "    return initial_conditions\n",
+    "    return initial_conditions, ps, thetas\n",
     "end\n",
     "\n",
     "function check_simulation_convergence(params_real, initial_condition, Kinf, xgoal, N, dt)\n",
@@ -310,7 +310,7 @@
     "    Kinf = zeros(1,4) \n",
     "    \n",
     "    # create the set of initial conditions we want to test for convergence\n",
-    "    initial_conditions = create_initial_conditions()\n",
+    "    initial_conditions, ps, thetas = create_initial_conditions()\n",
     "    \n",
     "    convergence_list = [] \n",
     "    \n",
