Fixed type in Q3

--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -275,8 +275,7 @@
     "\n",
     "Now we are going to assume that we have a perfect model (assume there is no sim to real gap), and that we have a perfect state estimate. With this, we are going to solve our control problem as a convex trajectory optimization problem. \n",
     "\n",
-    "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} (x_i - x_{ref, i})^TQ(x_i - x_{ref, i}) + \\frac{1}{2} u_i^TRu_i \\bigg] \n",
-    "(x_N- x_{ref, N})\\\\ \n",
+    "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} (x_i - x_{ref, i})^TQ(x_i - x_{ref, i}) + \\frac{1}{2} u_i^TRu_i \\bigg] \\\\ \n",
     " \\text{st} \\quad & x_1 = x_{\\text{IC}} \\\\ \n",
     " & x_{i+1} = A x_i + Bu_i \\quad \\text{for } i = 1,2,\\ldots,N-1  \\\\ \n",
     " & u_{min} \\leq u_i \\leq u_{max} \\quad \\text{for } i = 1,2,\\ldots,N-1 \\\\\n",
