fixed spelling of Riccati

--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -136,13 +136,15 @@
     "\n",
     "end\n",
     "\n",
+    "# true nonlinear dynamics of the system\n",
+    "# if I want to simulate, this is what I do\n",
     "function rk4(params::NamedTuple, x::Vector,u,dt::Float64)\n",
     "    # vanilla RK4\n",
     "    k1 = dt*dynamics(params, x, u)\n",
     "    k2 = dt*dynamics(params, x + k1/2, u)\n",
     "    k3 = dt*dynamics(params, x + k2/2, u)\n",
     "    k4 = dt*dynamics(params, x + k3, u)\n",
-    "    x + (1/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
+    "    return x + (1/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
     "end"
    ]
   },
@@ -198,7 +200,7 @@
     "    Kinf = zeros(1,4) \n",
     "    \n",
     "    # TODO: simulate this controlled system with rk4(params_real, ...)\n",
-    "    \n",
+    "\n",
     "    \n",
     "    # ---------------tests and plots/animations---------------\n",
     "    @test X[1] == x0 \n",
