--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -393,13 +393,13 @@
    "id": "5c80ae78",
    "metadata": {},
    "source": [
-    "## Part C: Finite-Horizon LQR via Ricatti (10 pts)\n",
+    "## Part C: Finite-Horizon LQR via Riccati (10 pts)\n",
     "Now we are going to solve the original finite-horizon LQR problem:\n",
     "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} x_i^TQx_i + \\frac{1}{2} u_i^TRu_i \\bigg] + \\frac{1}{2}x_N^TQ_fx_N\\\\ \n",
     " \\text{st} \\quad & x_1 = x_{\\text{IC}} \\\\ \n",
     " & x_{i+1} = A x_i + Bu_i \\quad \\text{for } i = 1,2,\\ldots,N-1 \n",
     " \\end{align}$$\n",
-    " with a Ricatti recursion instead of convex optimization. We describe our optimal cost-to-go function (aka the Value function) as the following:\n",
+    " with a Riccati recursion instead of convex optimization. We describe our optimal cost-to-go function (aka the Value function) as the following:\n",
     " \n",
     " $$V_k(x) = \\frac{1}{2}x^TP_kx$$."
    ]
@@ -423,7 +423,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "use the Ricatti recursion to calculate the cost to go quadratic matrix P and \n",
+    "use the Riccati recursion to calculate the cost to go quadratic matrix P and \n",
     "optimal control gain K at every time step. Return these as a vector of matrices, \n",
     "where P_k = P[k], and K_k = K[k]\n",
     "\"\"\"\n",
@@ -449,7 +449,7 @@
     "    # initialize S[N] with Qf \n",
     "    P[N] = deepcopy(Qf)\n",
     "    \n",
-    "    # Ricatti \n",
+    "    # Riccati\n",
     "    for k = NaN:NaN\n",
     "        # TODO \n",
     "        \n",
@@ -724,7 +724,7 @@
    "metadata": {},
    "source": [
     "## Part E: Infinite-horizon LQR (10 pts)\n",
-    "Up until this point, we have looked at finite-horizon LQR which only considers a finite number of timesteps in our trajectory.  When this problem is solved with a Ricatti recursion, there is a new feedback gain matrix $K_k$ for each timestep. As the length of the trajectory increases, the first feedback gain matrix $K_1$ will begin to converge on what we call the \"infinite-horizon LQR gain\".  This is the value that $K_1$ converges to as $N \\rightarrow \\infty$.\n",
+    "Up until this point, we have looked at finite-horizon LQR which only considers a finite number of timesteps in our trajectory.  When this problem is solved with a Riccati recursion, there is a new feedback gain matrix $K_k$ for each timestep. As the length of the trajectory increases, the first feedback gain matrix $K_1$ will begin to converge on what we call the \"infinite-horizon LQR gain\".  This is the value that $K_1$ converges to as $N \\rightarrow \\infty$.\n",
     "\n",
     "Below, we will plot the values of $P$ and $K$ throughout the horizon and observe this convergence. "
    ]
@@ -776,7 +776,7 @@
    "id": "13a23f92",
    "metadata": {},
    "source": [
-    "Complete this infinite horizon LQR function where you do a Ricatti recursion until the cost to go matrix P converges:\n",
+    "Complete this infinite horizon LQR function where you do a Riccati recursion until the cost to go matrix P converges:\n",
     "\n",
     "$$ \\|P_k - P_{k+1}\\| \\leq \\text{tol}$$\n",
     "\n",
@@ -794,14 +794,14 @@
     "P,K = ihlqr(A,B,Q,R)\n",
     "\n",
     "TODO: complete this infinite horizon LQR function where \n",
-    "you do the ricatti recursion until the cost to go matrix \n",
+    "you do the Riccati recursion until the cost to go matrix \n",
     "P converges to a steady value |P_k - P_{k+1}| ≤ tol \n",
     "\"\"\"\n",
     "function ihlqr(A::Matrix,       # vector of A matrices \n",
     "               B::Matrix,       # vector of B matrices\n",
     "               Q::Matrix,       # cost matrix Q \n",
     "               R::Matrix;       # cost matrix R \n",
-    "               max_iter = 1000, # max iterations for Ricatti \n",
+    "               max_iter = 1000, # max iterations for Riccati\n",
     "               tol = 1e-5       # convergence tolerance\n",
     "               )::Tuple{Matrix, Matrix} # return two matrices \n",
     "        \n",
@@ -811,8 +811,8 @@
     "    # initialize S with Q\n",
     "    P = deepcopy(Q)\n",
     "    \n",
-    "    # Ricatti \n",
-    "    for ricatti_iter = 1:max_iter \n",
+    "    # Riccati \n",
+    "    for riccati_iter = 1:max_iter \n",
     "\n",
     "        # TODO \n",
     "\n",
@@ -832,7 +832,7 @@
     "    R = .5*diagm(ones(nu))\n",
     "    P, K = ihlqr(A,B,Q,R)\n",
     "    \n",
-    "    # check this P is in fact a solution to the Ricatti equation\n",
+    "    # check this P is in fact a solution to the Riccati equation\n",
     "    @test typeof(P) == Matrix{Float64} \n",
     "    @test typeof(K) == Matrix{Float64}\n",
     "    @test 1e-13 < norm(Q + K'*R*K + (A - B*K)'P*(A - B*K) - P) < 1e-3\n",
